v1.0.0/modules/schema/pages/class/TestStandard.adoc
= `TestStandard`
:toclevels: 4


+++The precise standard used in executing a lab test, including the standard, and standard version, test method and variant, if needed.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TestStandard`


| CIM standard (perspective)
| IEC61968 (Enterprise)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`TestStandard`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
TestStandard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ASTMStandard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



CIGREStandard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DINStandard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DobleStandard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



EPAStandard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



IECStandard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



IEEEStandard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ISOStandard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



LaborelecStandard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TAPPIStandard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



UKMinistryOfDefenceStandard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



WEPStandard {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AssetStringMeasurement {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AssetAnalog {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



AssetDiscrete {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




TestStandard -> ASTMStandard: testStandardASTM


TestStandard -> CIGREStandard: testStandardCIGRE


TestStandard -> DINStandard: testStandardDIN


TestStandard -> DobleStandard: testStandardDoble


TestStandard -> EPAStandard: testStandardEPA


TestStandard -> IECStandard: testStandardIEC


TestStandard -> IEEEStandard: testStandardIEEE


TestStandard -> ISOStandard: testStandardISO


TestStandard -> LaborelecStandard: testStandardLaborelec


TestStandard -> TAPPIStandard: testStandardTAPPI


TestStandard -> UKMinistryOfDefenceStandard: testStandardUKMinistryOfDefence


TestStandard -> WEPStandard: testStandardWEP


TestStandard -> AssetStringMeasurement: AssetString


TestStandard -> AssetAnalog: AssetAnalog


TestStandard -> AssetDiscrete: AssetDiscrete


TestStandard -> DiagramObject: DiagramObjects


TestStandard -> InstanceSet: InstanceSet


TestStandard -> Name: Names


TestStandard -> ChangeSetMember: PropertiesCIMDataObject


TestStandard -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<testMethod,`testMethod`>>
| 0..1
| xref::enumeration/TestMethod.adoc[`TestMethod`]
| +++Identification of test method used if multiple methods specified by test standard.+++

| <<testStandardASTM,`testStandardASTM`>>
| 0..1
| xref::class/ASTMStandard.adoc[`ASTMStandard`]
| +++Which ASTM standard used to determine analog value result. Applies only if ASTM standard used.+++

| <<testStandardCIGRE,`testStandardCIGRE`>>
| 0..1
| xref::class/CIGREStandard.adoc[`CIGREStandard`]
| +++Which CIGRE standard used to determine analog value result. Applies only if CIGRE standard used.+++

| <<testStandardDIN,`testStandardDIN`>>
| 0..1
| xref::class/DINStandard.adoc[`DINStandard`]
| +++Which DIN standard used to determine analog value result. Applies only if DIN standard used.+++

| <<testStandardDoble,`testStandardDoble`>>
| 0..1
| xref::class/DobleStandard.adoc[`DobleStandard`]
| +++Which Doble standard used to determine analog value result. Applies only if Doble standard used.+++

| <<testStandardEPA,`testStandardEPA`>>
| 0..1
| xref::class/EPAStandard.adoc[`EPAStandard`]
| +++Which EPA standard used to determine analog value result. Applies only if EPA standard used.+++

| <<testStandardIEC,`testStandardIEC`>>
| 0..1
| xref::class/IECStandard.adoc[`IECStandard`]
| +++Which IEC standard used to determine analog value result. Applies only if IEC standard used.+++

| <<testStandardIEEE,`testStandardIEEE`>>
| 0..1
| xref::class/IEEEStandard.adoc[`IEEEStandard`]
| +++Which IEEE standard used to determine analog value result. Applies only if IEEE standard used.+++

| <<testStandardISO,`testStandardISO`>>
| 0..1
| xref::class/ISOStandard.adoc[`ISOStandard`]
| +++Which ISO standard used to determine analog value result. Applies only if ISO standard used.+++

| <<testStandardLaborelec,`testStandardLaborelec`>>
| 0..1
| xref::class/LaborelecStandard.adoc[`LaborelecStandard`]
| +++Which Laborelec standard used to determine analog value result. Applies only if Laborelec standard used.+++

| <<testStandardTAPPI,`testStandardTAPPI`>>
| 0..1
| xref::class/TAPPIStandard.adoc[`TAPPIStandard`]
| +++Which TAPPI standard used to determine analog value result. Applies only if TAPPI standard used.+++

| <<testStandardUKMinistryOfDefence,`testStandardUKMinistryOfDefence`>>
| 0..1
| xref::class/UKMinistryOfDefenceStandard.adoc[`UKMinistryOfDefenceStandard`]
| +++Which UK Ministry of Defence standard used to determine analog value result. Applies only if UK Ministry of Defence standard used.+++

| <<testStandardWEP,`testStandardWEP`>>
| 0..1
| xref::class/WEPStandard.adoc[`WEPStandard`]
| +++Which WEP standard used to determine analog value result. Applies only if WEP standard used.+++

| <<testVariant,`testVariant`>>
| 0..1
| xref::enumeration/TestVariantKind.adoc[`TestVariantKind`]
| +++Identification of variant of test method or standard if one is specified by the standard.+++

| <<AssetAnalog,`AssetAnalog`>>
| 0..*
| xref::class/AssetAnalog.adoc[`AssetAnalog`]
| +++An asset health analog related to this lab test standard.+++

| <<AssetDiscrete,`AssetDiscrete`>>
| 0..*
| xref::class/AssetDiscrete.adoc[`AssetDiscrete`]
| +++An asset health discrete related to this lab test standard.+++

| <<AssetString,`AssetString`>>
| 0..*
| xref::class/AssetStringMeasurement.adoc[`AssetStringMeasurement`]
| +++An asset health string related to this lab test standard.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AssetAnalog]
=== `AssetAnalog`
+++An asset health analog related to this lab test standard.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.AssetAnalog`
| Cardinality
| 0..*
| Type
| xref::class/AssetAnalog.adoc[`AssetAnalog`]


|===

//[discrete]
[#AssetDiscrete]
=== `AssetDiscrete`
+++An asset health discrete related to this lab test standard.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.AssetDiscrete`
| Cardinality
| 0..*
| Type
| xref::class/AssetDiscrete.adoc[`AssetDiscrete`]


|===

//[discrete]
[#AssetString]
=== `AssetString`
+++An asset health string related to this lab test standard.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.AssetString`
| Cardinality
| 0..*
| Type
| xref::class/AssetStringMeasurement.adoc[`AssetStringMeasurement`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#testMethod]
=== `testMethod`
+++Identification of test method used if multiple methods specified by test standard.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.testMethod`
| Cardinality
| 0..1
| Type
| xref::enumeration/TestMethod.adoc[`TestMethod`]


|===

//[discrete]
[#testStandardASTM]
=== `testStandardASTM`
+++Which ASTM standard used to determine analog value result. Applies only if ASTM standard used.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.testStandardASTM`
| Cardinality
| 0..1
| Type
| xref::class/ASTMStandard.adoc[`ASTMStandard`]


|===

//[discrete]
[#testStandardCIGRE]
=== `testStandardCIGRE`
+++Which CIGRE standard used to determine analog value result. Applies only if CIGRE standard used.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.testStandardCIGRE`
| Cardinality
| 0..1
| Type
| xref::class/CIGREStandard.adoc[`CIGREStandard`]


|===

//[discrete]
[#testStandardDIN]
=== `testStandardDIN`
+++Which DIN standard used to determine analog value result. Applies only if DIN standard used.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.testStandardDIN`
| Cardinality
| 0..1
| Type
| xref::class/DINStandard.adoc[`DINStandard`]


|===

//[discrete]
[#testStandardDoble]
=== `testStandardDoble`
+++Which Doble standard used to determine analog value result. Applies only if Doble standard used.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.testStandardDoble`
| Cardinality
| 0..1
| Type
| xref::class/DobleStandard.adoc[`DobleStandard`]


|===

//[discrete]
[#testStandardEPA]
=== `testStandardEPA`
+++Which EPA standard used to determine analog value result. Applies only if EPA standard used.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.testStandardEPA`
| Cardinality
| 0..1
| Type
| xref::class/EPAStandard.adoc[`EPAStandard`]


|===

//[discrete]
[#testStandardIEC]
=== `testStandardIEC`
+++Which IEC standard used to determine analog value result. Applies only if IEC standard used.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.testStandardIEC`
| Cardinality
| 0..1
| Type
| xref::class/IECStandard.adoc[`IECStandard`]


|===

//[discrete]
[#testStandardIEEE]
=== `testStandardIEEE`
+++Which IEEE standard used to determine analog value result. Applies only if IEEE standard used.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.testStandardIEEE`
| Cardinality
| 0..1
| Type
| xref::class/IEEEStandard.adoc[`IEEEStandard`]


|===

//[discrete]
[#testStandardISO]
=== `testStandardISO`
+++Which ISO standard used to determine analog value result. Applies only if ISO standard used.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.testStandardISO`
| Cardinality
| 0..1
| Type
| xref::class/ISOStandard.adoc[`ISOStandard`]


|===

//[discrete]
[#testStandardLaborelec]
=== `testStandardLaborelec`
+++Which Laborelec standard used to determine analog value result. Applies only if Laborelec standard used.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.testStandardLaborelec`
| Cardinality
| 0..1
| Type
| xref::class/LaborelecStandard.adoc[`LaborelecStandard`]


|===

//[discrete]
[#testStandardTAPPI]
=== `testStandardTAPPI`
+++Which TAPPI standard used to determine analog value result. Applies only if TAPPI standard used.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.testStandardTAPPI`
| Cardinality
| 0..1
| Type
| xref::class/TAPPIStandard.adoc[`TAPPIStandard`]


|===

//[discrete]
[#testStandardUKMinistryOfDefence]
=== `testStandardUKMinistryOfDefence`
+++Which UK Ministry of Defence standard used to determine analog value result. Applies only if UK Ministry of Defence standard used.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.testStandardUKMinistryOfDefence`
| Cardinality
| 0..1
| Type
| xref::class/UKMinistryOfDefenceStandard.adoc[`UKMinistryOfDefenceStandard`]


|===

//[discrete]
[#testStandardWEP]
=== `testStandardWEP`
+++Which WEP standard used to determine analog value result. Applies only if WEP standard used.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.testStandardWEP`
| Cardinality
| 0..1
| Type
| xref::class/WEPStandard.adoc[`WEPStandard`]


|===

//[discrete]
[#testVariant]
=== `testVariant`
+++Identification of variant of test method or standard if one is specified by the standard.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TestStandard.testVariant`
| Cardinality
| 0..1
| Type
| xref::enumeration/TestVariantKind.adoc[`TestVariantKind`]


|===


